--- a/content/0.index.yml
+++ b/content/0.index.yml
@@ -1,5 +1,5 @@
 title: ШКОЛАМОТО.РФ
-description: Мы нерельно крутые веселые и быстрые
+description: Мы нерельно крутые, веселые и быстрые
 seo:
   title: Nuxt UI Pro - SaaS template
   description: Nuxt UI Pro is a collection of premium Vue components built on top of Nuxt UI to create beautiful & responsive Nuxt applications in minutes.
